--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-typex": "^3.1.5"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.7.0",
