--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prettier": "^1.19.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "~3.9.3",
     "vue-cli-plugin-bootstrap-vue": "~0.6.0",
     "vue-template-compiler": "^2.6.11"
